Fix Tag Page not Showing Bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1576,6 +1576,10 @@ box-shadow: -4px -3px 21px -9px rgba(204,204,204,1);*/
 	margin: 0 6px 0 0;
 }
 
+.home2 {
+	margin: 0 16px 0 0;
+}
+
 #namebox {
 	@extend #settingsbox;
 	margin: -21px 10px 0 0;
